@@ -21,6 +21,8 @@ News
     and ``2f`` (float32) which means imports like ``import scene/2d/sprite``
     do not work anymore. Instead quotes have to be
     used: ``import "scene/2d/sprite"``. The former code never was valid Nim.
+  - The ``HandleType`` enum variants in ``lib/wrappers/libuv.nim`` have been
+    changed to add a ``ht`` prefix in order to accommodate naming conflicts.
 
 
   Library additions
